# iec61850_vIED_honeypot

./: .gitignore  CMakeLists.txt  Dockerfile.attacker  Dockerfile.circuit_simulator  Dockerfile.libiec61850_server  README.md  TODO.txt  entrypoint.sh  make_model_substation.sh  open_server.c  substation.simulator.yml  substation.yml
LNs/: CILO.c  CSWI.c  LLN0.c  LNParse.c  MMXU.c  PDIF.c  PDIS.c  PIOC.c  PTOC.c  PTRC.c  RDRE.c  RREC.c  SMVPublisher.c  TCTR.c  TVTR.c  XCBR.c  XSWI.c
cfg/: BUS1.cfg  BUS1.ext  BUS2.cfg  BUS2.ext  FEED1.cfg  FEED1.ext  FEED2.cfg  FEED2.ext  IED1_XCBR.cfg  IED1_XCBR.ext  IED2_PTOC.cfg  IED2_PTOC.ext  IED3_SMV.cfg  IED3_SMV.ext  IED4_SMV.cfg  IED4_SMV.ext  TR1.cfg  TR1.ext  TR2.cfg  TR2.ext
circuit_simulator/: circuit_simulator.py  requirements.txt  webAPI.py
circuit_simulator/models/: CBR.subckt  DIS.subckt  PTR.subckt
documentation/: 1.md  2.md  3.md  4.md  5.md  6.md
functions/: dft.c  dsp.c  rms.c
inc/: LLN0.h  MMXU.h  XSWI.h  dsp.h  honeypot_logger_c_api.h  inputs_api.h  mms_utilities.h  string_utilities.h
input/: inputs.c
model/: config_file_parser_extensions.c
plugin/: cbr_simulator.config  hw_connector.config  local_sample_simulator.config.off  ui_connector.config
plugin_src/: CMakeLists.txt
plugin_src/cbr_process/: CMakeLists.txt  cbr_process.c
plugin_src/cbr_simulation/: CMakeLists.txt  cbr_simulation.c  main.c
plugin_src/hw_connector/: CMakeLists.txt  config_parser.c  hw_connector.c  main.c
plugin_src/local_sample_simulation/: CMakeLists.txt  local_sample_simulation.c
plugin_src/python/: CMakeLists.txt  python.c
plugin_src/simulation_process/: CMakeLists.txt  simulation.c
plugin_src/ui_connector/: CMakeLists.txt  main.c  ui_connector.c
scd/: model_substation.scd  open_substation.scd
tests/: mms_exploit  mms_exploit.c  simulate_attacks.py
utils/: honeypot_logger.hpp  honeypot_logger_c_api.cpp  mms_utilities.c  string_utilities.c
vmd-filestore/: comtrade_data.cfg  extend.py
